Add toggle icon to navigation. Set colors to variables. Add some fixes.

--- a/app/scss/components/_button.scss
+++ b/app/scss/components/_button.scss
@@ -1,7 +1,7 @@
 .btn {
-  background-color: #ffb01e;
+  background-color: $btn-color;
   border: none;
-  color: #fff;
+  color: $white;
   cursor: pointer;
   outline: none;
   font-size: 1.3rem;
