--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -5,6 +5,7 @@ Imports all project style components.
 */
 
 // Variables
+@import "variables/colors.scss";
 @import "variables/fonts.scss";
 
 // Mixins
