--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -199,11 +199,27 @@ html {
       padding-bottom: 5px; } }
   @media all and (max-width: 575px) {
     .nav {
-      height: auto; } }
+      height: auto;
+      position: relative; } }
+  .nav__toggle-container {
+    display: none; }
+    @media all and (max-width: 575px) {
+      .nav__toggle-container {
+        display: block;
+        order: 2;
+        padding: 10px;
+        width: 100%; } }
+  .nav__toggle-icon {
+    width: 30px;
+    cursor: pointer; }
+  .nav__media-icons {
+    display: inline-block;
+    float: right; }
   .nav__list {
     display: flex;
     flex-wrap: nowrap;
-    justify-content: space-between; }
+    justify-content: space-between;
+    transition: transform .3s; }
     @media all and (max-width: 767px) {
       .nav__list {
         justify-content: space-around; } }
@@ -213,7 +229,9 @@ html {
         height: auto;
         padding: 0;
         flex-wrap: wrap;
-        justify-content: flex-start; } }
+        justify-content: flex-start;
+        position: absolute;
+        background-color: #fff; } }
   .nav__list--left {
     padding-right: 30px;
     padding-left: 60px; }
@@ -223,13 +241,21 @@ html {
         padding-right: 0; } }
     @media all and (max-width: 575px) {
       .nav__list--left {
-        padding-left: 0; } }
+        padding-left: 0;
+        top: 182px; } }
   .nav__list--right {
     padding-left: 30px; }
     @media all and (max-width: 767px) {
       .nav__list--right {
         order: 3;
         padding-left: 0; } }
+    @media all and (max-width: 575px) {
+      .nav__list--right {
+        top: 286px; } }
+  @media all and (max-width: 575px) {
+    .nav__list--moved {
+      transform: translateX(-100%);
+      transition: all .3s; } }
   .nav__list-item {
     padding: 0 20px; }
     @media all and (max-width: 991px) {
@@ -241,6 +267,11 @@ html {
         height: 35px; } }
   .nav__link {
     cursor: pointer; }
+    @media all and (max-width: 575px) {
+      .nav__link {
+        display: inline-block;
+        width: 100%;
+        height: 100%; } }
   .nav__text {
     color: #003f8c;
     font-size: 1.3rem;
@@ -250,8 +281,7 @@ html {
     align-items: center; }
   @media all and (max-width: 575px) {
     .nav__list-item--narrower {
-      width: 50px;
-      height: 45px; } }
+      display: none; } }
   .nav__logo-container {
     width: 25%;
     position: relative; }
@@ -481,8 +511,7 @@ html {
 .rooms__content {
   text-align: justify;
   display: inline-block;
-  width: 35%;
-  box-sizing: content-box; }
+  width: 46%; }
 
 .rooms__content-part {
   padding-bottom: 1.3rem; }
@@ -516,9 +545,7 @@ html {
       padding-top: 0; } }
   @media all and (max-width: 767px) {
     .rooms .content-box {
-      width: 40%;
-      padding: 10px;
-      padding-bottom: 50px; } }
+      width: 40%; } }
   @media all and (max-width: 575px) {
     .rooms .content-box {
       width: 100%;
@@ -529,7 +556,7 @@ html {
     @media all and (max-width: 991px) {
       .rooms .content-box--padding-left {
         padding-left: 30px; } }
-    @media all and (max-width: 767px) {
+    @media all and (max-width: 575px) {
       .rooms .content-box--padding-left {
         padding-left: 0; } }
   .rooms .content-box--padding-right {
@@ -539,7 +566,7 @@ html {
     @media all and (max-width: 991px) {
       .rooms .content-box--padding-right {
         padding-right: 30px; } }
-    @media all and (max-width: 767px) {
+    @media all and (max-width: 575px) {
       .rooms .content-box--padding-right {
         padding-right: 0; } }
   .rooms .content-box__icons {
@@ -568,12 +595,12 @@ html {
       right: 14%; }
       @media all and (max-width: 767px) {
         .rooms .content-box__price--left {
-          right: 15.5%; } }
+          right: 17%; } }
     .rooms .content-box__price--right {
       left: 14%; }
       @media all and (max-width: 767px) {
         .rooms .content-box__price--right {
-          left: 15.5%; } }
+          left: 17%; } }
     @media all and (max-width: 575px) {
       .rooms .content-box__price {
         position: static;
@@ -696,7 +723,9 @@ html {
         background-size: 1000px;
         background-position-x: 64%;
         background-position-y: -104px;
-        background-repeat: no-repeat; } }
+        background-repeat: no-repeat;
+        position: relative;
+        left: -30px; } }
   .contact__content {
     display: inline-block;
     width: 40%;
@@ -748,7 +777,7 @@ html {
 .footer {
   width: 100%;
   height: 70px;
-  background-color: #003F8C;
+  background-color: #003f8c;
   color: #fff;
   display: flex;
   justify-content: space-around;
