--- a/app/scss/base/_general.scss
+++ b/app/scss/base/_general.scss
@@ -89,14 +89,14 @@ html {
     padding-bottom: 1.5rem;
     font-size: 2.45rem;
     font-weight: 300;
-    color: #003f8c;
+    color: $main-color;
 
     @media #{$max991} {
       padding-bottom: 5px;
     }
 
     &-color {
-      color: #ffb01e;
+      color: $btn-color;
       font-weight: 600;
     }
   }
