--- a/app/scss/modules/_footer.scss
+++ b/app/scss/modules/_footer.scss
@@ -1,8 +1,8 @@
 .footer {
     width: 100%;
     height: 70px;
-    background-color: #003F8C;
-    color: #fff;
+    background-color: $main-color;
+    color: $white;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -28,10 +28,6 @@
         justify-content: space-between;
         flex-wrap: wrap;
         align-items: center;
-        @media #{$max575} {
-            // justify-content: center;
-        }
-        
     }
 
     &__list-item {
