--- a/app/scss/modules/_header.scss
+++ b/app/scss/modules/_header.scss
@@ -11,7 +11,7 @@
   padding: 40px;
   padding-top: 10rem;
   margin: 0 auto;
-  background-color: #003f8cea;
+  background-color: $main-color-transparent;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -37,7 +37,7 @@
     margin: 0 auto;
     font-size: 3.2rem;
     font-family: $other-font;
-    color: #fff;
+    color: $white;
     font-weight: 400;
     text-align: center;
 
@@ -50,7 +50,6 @@
     width: 225px;
     height: 53px;
     display: block;
-    // margin: 60px auto 67px auto;
 
     @media #{$max400} {
       margin: 10px auto;
@@ -75,7 +74,7 @@
   &__title {
     width: 100%;
     font-size: 2rem;
-    color: #fff;
+    color: $white;
     font-weight: normal;
     padding-bottom: 38px;
   }
@@ -100,26 +99,26 @@
 
     &--date {
       background: url("../../images/icons/calendar.svg");
-      background-color: #fff;
+      background-color: $white;
       background-repeat: no-repeat;
       background-position: 95% center;
 
       &:focus {
         background: none;
-        background-color: #fff;
+        background-color: $white;
       }
     }
     &--select {
       appearance: none;
       background: url("../../images/icons/arrow-down.svg");
-      background-color: #fff;
+      background-color: $white;
       background-repeat: no-repeat;
       background-position: 95% center;
     }
 
     &--arrow-up {
       background: url("../../images/icons/arrow-up.png");
-      background-color: #fff;
+      background-color: $white;
       background-repeat: no-repeat;
       background-position: 95% center;
       background-size: 13px;
