--- a/app/scss/modules/_section-contact.scss
+++ b/app/scss/modules/_section-contact.scss
@@ -46,6 +46,8 @@
       background-position-x: 64%;
       background-position-y: -104px;
       background-repeat: no-repeat;
+      position: relative;
+      left: -30px;
     }
   }
 
@@ -108,7 +110,7 @@
       margin-bottom: 10px;
 
       &::placeholder {
-        color: #000;
+        color: $black;
       }
     }
 
@@ -120,11 +122,8 @@
       margin-bottom: 10px;
 
       &::placeholder {
-        color: #000;
+        color: $black;
       }
-    }
-
-    &__checkbox {
     }
   }
 }
