--- a/app/scss/modules/_section-restaurants.scss
+++ b/app/scss/modules/_section-restaurants.scss
@@ -1,103 +1,92 @@
 .restaurants {
-    &__content {
-      text-align: justify;
-      display: inline-block;
-      width: 63%;
-      padding-left: 8.2rem;
-      padding-bottom: 1rem;
-      padding-top: 2.5rem;
-  
-      @media #{$max991} {
-        padding-left: 50px;
-      }
-      @media #{$max767} {
-        padding-left: 30px;
-      }
-      @media #{$max575} {
-        width: 100%;
-        padding-left: 0;
-        padding-top: 0;
-      }
+  &__content {
+    text-align: justify;
+    display: inline-block;
+    width: 63%;
+    padding-left: 8.2rem;
+    padding-bottom: 1rem;
+    padding-top: 2.5rem;
+
+    @media #{$max991} {
+      padding-left: 50px;
     }
-
-    .content-box {
-
-      &__icons {
-        display: flex;
-        height: 80px;
-        align-items: center;
-      }
-      
-      &__icons-container {
-        width: 50%;
-      }
-
-      &__icon {
-        display: inline-block;
-        height: 35px;
-        width: 50px;
-        vertical-align: middle;
-
-        @media #{$max575} {
-          width: 30px;
-        }
-      }
-
-      &__desc {
-        display: inline-block;
-        padding-left: 1rem;
-        width: calc(100% - 60px);
-        text-align: left;
-        font-size: 12px;
-        font-weight: 600;
-        color: #003f8c;
-        vertical-align: middle;
-        line-height: 19px;
-
-        @media #{$max575} {
-          padding-left: 5px;
-        }
-      }
+    @media #{$max767} {
+      padding-left: 30px;
     }
-  
-    &__content-part {
-      padding-bottom: 1.3rem;
-  
-      &--padding-btm {
-        padding-bottom: 3.5rem;
-      }
-    }
-  
-    &__image-container {
-      display: inline-block;
-      width: 37%;
-      position: relative;
-  
-      @media #{$max575} {
-        display: none;
-      }
-    }
-  
-    &__bcg-image {
+    @media #{$max575} {
       width: 100%;
-      position: absolute;
-      bottom: 0;
-      height: 100%;
-      background: url("../../images/photos/restaurant.png");
-      background-size: cover;
-  
-      @media #{$max1400} {
-        // height: 140%;
-      }
-  
-      @media #{$max767} {
-        // height: 100%;
-        // top: -30px;
-      }
-    }
-  
-    &__image {
-      width: 100%;
+      padding-left: 0;
+      padding-top: 0;
     }
   }
-  
+
+  .content-box {
+    &__icons {
+      display: flex;
+      height: 80px;
+      align-items: center;
+    }
+
+    &__icons-container {
+      width: 50%;
+    }
+
+    &__icon {
+      display: inline-block;
+      height: 35px;
+      width: 50px;
+      vertical-align: middle;
+
+      @media #{$max575} {
+        width: 30px;
+      }
+    }
+
+    &__desc {
+      display: inline-block;
+      padding-left: 1rem;
+      width: calc(100% - 60px);
+      text-align: left;
+      font-size: 12px;
+      font-weight: 600;
+      color: $main-color;
+      vertical-align: middle;
+      line-height: 19px;
+
+      @media #{$max575} {
+        padding-left: 5px;
+      }
+    }
+  }
+
+  &__content-part {
+    padding-bottom: 1.3rem;
+
+    &--padding-btm {
+      padding-bottom: 3.5rem;
+    }
+  }
+
+  &__image-container {
+    display: inline-block;
+    width: 37%;
+    position: relative;
+
+    @media #{$max575} {
+      display: none;
+    }
+  }
+
+  &__bcg-image {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    height: 100%;
+    background: url("../../images/photos/restaurant.png");
+    background-size: cover;
+  }
+
+  &__image {
+    width: 100%;
+  }
+}
