--- a/app/scss/modules/_section-rooms.scss
+++ b/app/scss/modules/_section-rooms.scss
@@ -2,9 +2,7 @@
   &__content {
     text-align: justify;
     display: inline-block;
-    width: 35%;
-    box-sizing: content-box;
-    // position: relative;
+    width: 46%;
   }
 
   &__content-part {
@@ -47,8 +45,6 @@
 
     @media #{$max767} {
       width: 40%;
-      padding: 10px;
-      padding-bottom: 50px;
     }
 
     @media #{$max575} {
@@ -63,8 +59,8 @@
       @media #{$max991} {
         padding-left: 30px;
       }
-  
-      @media #{$max767} {
+
+      @media #{$max575} {
         padding-left: 0;
       }
     }
@@ -77,8 +73,8 @@
       @media #{$max991} {
         padding-right: 30px;
       }
-  
-      @media #{$max767} {
+
+      @media #{$max575} {
         padding-right: 0;
       }
     }
@@ -94,13 +90,13 @@
     }
 
     &__icon {
-      color: #003f8c;
+      color: $main-color;
       height: 2.7rem;
     }
 
     &__price {
-      background-color: #003f8c;
-      color: #fff;
+      background-color: $main-color;
+      color: $white;
       width: 40%;
       height: 6rem;
       position: absolute;
@@ -114,7 +110,7 @@
         right: 14%;
 
         @media #{$max767} {
-          right: 15.5%;
+          right: 17%;
         }
       }
 
@@ -122,7 +118,7 @@
         left: 14%;
 
         @media #{$max767} {
-          left: 15.5%;
+          left: 17%;
         }
       }
 
